# agentic-peer-review

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
commands/: peer-review.md
references/checks/: dead-code.md  security.md  tech-debt.md
scripts/: change_log.py  cli.py  detect_project.py  format_output.py  git_diff.py  list_checks.py  parse_args.py  render_prompt.py  run_review.py  worktree.py
scripts/prompts/: audit.j2
skills/peer-review/: SKILL.md
skills/peer-review/references/checks/: architecture.md  bugs.md  performance.md
