[project]
name = "agentic-peer-review"
version = "1.0.0"
description = "Iterative AI peer review that finds and fixes issues in your codebase"
requires-python = ">=3.10"
dependencies = ["jinja2"]

[dependency-groups]
dev = ["ruff"]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
