[project]
name = "agentic-peer-review"
version = "1.1.1"
description = "Iterative AI peer review that finds and fixes issues in your codebase"
requires-python = ">=3.10"
dependencies = ["jinja2"]

[dependency-groups]
dev = ["ruff"]

[tool.hatch.build.targets.wheel]
packages = ["bin"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
